last tiny project

--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Vanilla JS Projects Showcase</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="styles/main.css" />
     <script defer src="main.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Vanilla JS Projects Showcase</h1>
-        <p>A collection of my projects built with pure JavaScript (no frameworks!)</p>
+      <h2>JS Projects Showcase</h2>
+      <p>
+        A collection of projects developed to strengthen my algorithmic
+        problem-solving skills.
+      </p>
     </header>
     <main>
-        <section class="projects" id="projects-list">
-            <!-- Projects will be injected here by JS -->
-        </section>
+      <section class="projects" id="projects-list">
+        <!-- Projects will be injected here by JS -->
+      </section>
     </main>
-   
-</body>
+  </body>
 </html>
